# nautobot-docker-compose

./: .gitignore  README.md  Taskfile.yml  _util.sh  compose.sh  config.env  invoke.ldap.yml  invoke.local.yml  invoke.mysql.yml  pyproject.toml  tasks.py
config/: nautobot_config_ldap.py
docs/: general.md  ldap.md  technical.md
environments/: Dockerfile  Dockerfile-LDAP  base.dockerfile  compose.nautobot.yml  compose.postgres.yml  compose.redis.yml  credentials.env  creds.example.env  docker-compose.base.yml  docker-compose.ldap.yml  docker-compose.local.yml  docker-compose.mysql.yml  ldap.dockerfile  local.example.env  settings.env
plugins/plugin_example/: pyproject.toml
