[tool.poetry]
name = "nautobot-docker-compose"
version = "0.1.1"
description = ""
requires-python = ">=3.9"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
# To install a local plugin
# nautobot-example-plugin = {path = "plugins/plugin_example", develop = true}
nautobot = "2.3.6"

[tool.poetry.dev-dependencies]
invoke = "*"
toml = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
